Updated the localamp page to fit with the rest of the site's styles, updated the content a little for today as opposed to when it was first written

--- a/siteonline.html
+++ b/siteonline.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
 <head>
 	<title>Get Your Website Online | OPRF Tech | The OPRF HS Technology Club</title>
@@ -7,20 +7,23 @@
 	<link rel=stylesheet href=style.css type=css />
 </head>
 <body>
-	<div id=wrapper>
+	<div id="container">
 		<a href=index.html>
-			<img src="oprftech.png" alt="OPRF Tech | The OPRF HS Technology Club" id=oprftech />
+			<img src="oprftech.png" alt="OPRF Tech | The OPRF HS Technology Club" id="oprftech" />
 		</a>
 		
 		<article>
-			<div id=big>
+			<div id="big">
 				<p>There are many reasons why you might want to get your own website online,
 				but regardless of the reason, you want it online. We at the OPRF Technology
 				Club understand, and are here to help you
-				somethingreallylongthatshouldntshowupeverandifitdoessomethingbroke</p>
+				<span class="noshow">
+					abigstringoftextthatshouldnotdisplayeverandifitdoessomethingbroke
+				</span>
+				</p>
 			</div>
 			
-			<div id=normal>
+			<div id="normal">
 				<p>achieve that goal, using only free services. The reason we've written this
 				guide is simply so that if our members (or former members) forget how they did 
 				it during our 'online setup days' they've got the instructions laid out in 
