added comments to the localamp and siteonline. Started adding them to the style page.

--- a/index.html
+++ b/index.html
@@ -229,6 +229,13 @@
 			<p>This site was designed and developed by 
 			<a href="http://dkuntz2.com">Don Kuntz</a> <!-- Hey, that's me! -->
 			for the OPRF Technology Club. It was developed using html5 and css3.</p>
+
+			<p>All code used on this site (and the accompanying photoshop document) are
+			licensed under the <a href="http://www.gnu.org/copyleft/gpl.html">GNU GPL v3</a>.</p>
+
+			<p>This site, in it's entirety, is available on 
+			<a href="http://github.com/OPRF-Tech/TechWeb">GitHub</a>, for all to use and remix as
+			wanted.</p>
 		</footer>
 		<!--
 			End of the footer.
