--- a/siteonline.html
+++ b/siteonline.html
@@ -1,19 +1,4 @@
-<!--
-	This is the FINAL page of explainations. If you haven't read index or localamp already, I
-	suggest you do that now, because this document assumes that you have.
--->
-
-<!DOCTYPE html>
-<html>
-<head>
-	<title>Get Your Website Online | OPRF Tech | The OPRF HS Technology Club</title>
-	<link href='http://fonts.googleapis.com/css?family=Droid+Serif:regular,bold,italic' rel='stylesheet' type='text/css'>
-	<link href='http://fonts.googleapis.com/css?family=Droid+Sans+Mono' rel='stylesheet' type='text/css'>
-	<link rel=stylesheet href=style.css type=css />
-</head>
-<body>
-	<div id="container">
-		<a href=index.html>
+		<a href="#main" rel="ajax">
 			<img src="oprftech.png" alt="OPRF Tech | The OPRF HS Technology Club" id="oprftech" />
 		</a>
 		
